src/components/BentoBox/BentoBox.module.css
@import url('../../var.css');

.bentoBoxHeader {
    background-color: var(--card-background);
    border-radius: 20px;
    filter: drop-shadow(var(--card-dropshadow));
}

.bentoBoxHeader h1 {
    font-size: 3rem;
}

.bentoBoxHeader h2 {
    font-size: 2rem;
}

.bentoBoxWithImage {
    background-size: cover;
    background-position: center;
    border-radius: 20px;
    transition: transform .2s;
}

.bentoBoxWithImage:hover {
    cursor: pointer;
    transform: scale(1.02);
}

.box1 {
    grid-area: bentoBox1;
}

.box2 {
    grid-area: bentoBox2;
}

.box3 {
    grid-area: bentoBox3;
}

.box4 {
    grid-area: bentoBox4;
    background-position: left;
}

.box5 {
    grid-area: bentoBox5;
}

.headerBento1 {
    grid-area: headerBento1;
}

.headerBento2 {
    grid-area: headerBento2;
}

.headerBento3 {
    grid-area: headerBento3;
}

.buttonBento1 {
    grid-area: buttonBento1;
}

.buttonBento2 {
    grid-area: buttonBento2;
}

.buttonBento3 {
    grid-area: buttonBento3;
}

.bentoBoxWithButton {
    background-color: var(--card-background);
    border-radius: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem;
    transition: transform .2s;
    filter: drop-shadow(var(--card-dropshadow));
}

.bentoBoxWithButton svg {
    width: 15%;
}

.bentoBoxWithButton:hover {
    cursor: pointer;
    transform: scale(1.05);
    background-color: var(--card-hover);
    color: var(--card-hover-text);
    
}


.pGroup {
    display: flex;
    flex-direction: column;
    margin-bottom: 1rem;
}

.textGroup {
    margin: 1rem;
}

.contactForm {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.contactForm h1 {
    font-size: 3rem;
    padding: 0;
    margin: 0;
}

.contactFormTop {
    display: grid;
    grid-template-columns: .5fr 1fr;
    margin: 1rem;
}

.contactFormHeader {
    display: flex;
    flex-direction: column;
}

.contactFormTopInputs {
    display: flex;
    flex-direction: column;
}

.contactForm input {
    margin-bottom: 1rem;
    padding: .5rem;
    border-radius: 10px;
    background-color: var(--background);
    border: var(--input-border);
    font: inherit;
    color: var(--text-color);

}

.contactFormBottom {
    display: flex;
    flex-direction: column;
    margin: 1rem; 
}

.contactFormBottom textarea {
    border-radius: 10px;
    background-color: var(--background);
    border: var(--input-border);
    padding: .5rem;
    font: inherit;
}

.contactFormButton {
    margin-top: 1rem;
    padding: 1rem;
    border-radius: 10px;
    align-self: end;
    width: 10%;
    border: var(--input-border);
    background-color: var(--card-background);
    color: var(--text-color);
    font: inherit;
    font-weight: bold;
    cursor: pointer;
}

.contactFormButton:hover {
    background-color: var(--card-hover);
    color: var(--card-hover-text);
}


p {
    margin: 0;
    padding: 0;
}

@media (max-width: 900px) {
    .bentoBoxHeader {
        text-align: center;
    }

    .bentoBoxWithButton {
        flex-direction: column;
        justify-content: center;
    }
    .bentoBoxWithButton svg {
        width: 35%;
    }

    .contactFormHeader {
        align-items: center;
        margin-bottom: 1rem;
    }

    .contactFormTop {
        grid-template-columns: 1fr;
    }

    .contactFormButton {
        width: 100%;
    }
}

@media (max-width: 480px) {
    .bentoBoxHeader h1 {
        font-size: 1.5rem;
    }

    .bentoBoxWithButton {
        padding: auto;
    }

    .bentoBoxWithButton h3 {
        font-size: 0rem;
    }

    .bentoBoxWithButton svg {
        width: 100%;
    }

    .contactForm h1 {
        font-size: 2rem;
    }

    .box4 {
        background-position: center;
    }
}

